# mako

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.md.tmp  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LANGUAGE_SPEC.md  README.md  ROADMAP_IMPL.md  SPEC.md  build.rs  fsig  llms-full.txt  llms.txt
Formula/: mako.rb
compiler/: lexer.mko  main.mko  parser.mko  z_expression.mko  z_statement.mko  z_type.mko  zz_expression_attach.mko  zz_symbols.mko  zzz_resolution.mko  zzzz_locals.mko  zzzzz_types.mko  zzzzzz_ir.mko
docs/: ABI.md  ADAPTIVE_OPT.md  ASYNC.md  BUILD.md  BUILTINS.md  CLI.md  COMPAT.md  DEBUG.md  ERGONOMICS.md  EXAMPLES.md  GENERAL_PURPOSE_PLAN.md  GO_SYNTAX_CHECKLIST.md  GUIDE.md  IDENTITY.md  KEYWORDS.md  LANGUAGE.md  LONG_RUNNING.md  MEMORY_MODEL.md  MESSAGING_GRAPHQL.md  NATIVE_COMPILER_PLAN.md  PAIN_POINTS.md  PERFORMANCE.md  RELEASE.md  ROADMAP.md  SECURITY.md  SELF_HOSTING.md  SOUNDNESS.md  SPEED.md  SPEED_SAFE.md  STATUS.md  STDLIB.md  VERSIONING.md  VISION.md  WASM.md
examples/: concurrency.mko  dotpkg.mko  export_seed.mko  extras.mko  fmt_demo.mko  generics_user.mko  go_style.mko  h2_server.mko  h3_server.mko  hello.c  identity_lint_sample.mko  import_as_main.mko  import_lib.mko  import_main.mko  import_ns_lib.mko  integers.mko  llm_chat.mko  mail_program.mko  mako_style.mko  map.mko  model_mlp.mko  on_methods.mko  pack_types_lib.mko  parallel.mko  select_syntax.mko  send_mail.mko  showcase.mko  sip_ua.mko  template_demo.mko  tuples_chan.mko
packaging/: README.md  RELEASE-CHECKSUMS-0.1.4.md  RELEASE-CHECKSUMS-0.1.7.md  RELEASE-CHECKSUMS-0.1.9.md  RELEASE-CHECKSUMS-0.2.2.md  RELEASE-CHECKSUMS-0.2.3.md  RELEASE-CHECKSUMS-0.4.5.md  RELEASE-NOTES-0.1.6.md  RELEASE-NOTES-0.2.2.md  RELEASE-NOTES-0.2.3.md  RELEASE-NOTES-0.2.4.md
runtime/: mako_cloud.h  mako_cmap.h  mako_db.h  mako_dio.h  mako_domain.h  mako_evloop.h  mako_fmt.h  mako_game.h  mako_goext.h  mako_gpu.h  mako_http.h  mako_leak.h  mako_llm.h  mako_log.h  mako_mail.h  mako_model.h  mako_net.h  mako_overflow.h  mako_platform.h  mako_proxy.h  mako_quiche.h  mako_rt.h  mako_security.h  mako_shutdown.h  mako_sip.h  mako_std.h  mako_stdlib.h  mako_template.h  mako_tls.h  mako_tok.h  mako_trace.h  mako_uuid.h  mako_ws.h  native_bridge.c  native_runtime.c
src/: cc.rs  (+19 more)
(+469 files in other folders)
