[package]
name = "mako"
version = "0.3.0"
edition = "2021"
description = "Mako — compiled language for backend development (no GC, native binaries, structured concurrency)"
license = "MIT"

[[bin]]
name = "mako"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
sha2 = "0.10"
thiserror = "2"
