[package]
name = "mako"
version = "0.4.0"
edition = "2021"
description = "Mako — compiled language for backend development (no GC, native binaries, structured concurrency)"
license = "MIT"

[[bin]]
name = "mako"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
sha2 = "0.10"
thiserror = "2"

[profile.dev]
# The split type/codegen dispatchers deliberately stay uninlined at opt-level 0;
# Windows CI checks them against the default 1 MiB stack. Do not flatten them.
opt-level = 0
