[package]
name = "mako"
version = "0.4.6"
edition = "2021"
description = "Mako — compiled language for backend development (no GC, native binaries, structured concurrency)"
license = "MIT"

[[bin]]
name = "mako"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
cranelift-codegen = "0.133.1"
cranelift-frontend = "0.133.1"
cranelift-module = "0.133.1"
cranelift-native = "0.133.1"
cranelift-object = "0.133.1"
inkwell = { version = "0.9.0", optional = true, default-features = false, features = ["llvm21-1-force-static"] }
regex = "1"
sha2 = "0.10"
thiserror = "2"

[features]
default = []
llvm-backend = ["dep:inkwell"]

[build-dependencies]
cc = "1.3"

[target.'cfg(target_arch = "aarch64")'.dependencies]
inkwell = { version = "0.9.0", optional = true, default-features = false, features = ["target-aarch64"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
inkwell = { version = "0.9.0", optional = true, default-features = false, features = ["target-x86"] }

[profile.dev]
# The split type/codegen dispatchers deliberately stay uninlined at opt-level 0;
# Windows CI checks them against the default 1 MiB stack. Do not flatten them.
opt-level = 0

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
